--- a/RestYa/res/layout/oauth_web_view.xml
+++ b/RestYa/res/layout/oauth_web_view.xml
@@ -13,7 +13,8 @@
             android:id="@+id/btnComplete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_complete" />
+            android:text="@string/label_complete"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btnCancel"
